--- a/FE-CRUDMascotas/src/app/app.component.html
+++ b/FE-CRUDMascotas/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Hola Mundo!</h1>
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+<!--<h1>Hola Mundo!</h1>
+<mat-slider min="1" max="100" step="1" value="50"></mat-slider>-->
+<app-listado-mascota></app-listado-mascota>
