--- a/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
@@ -35,6 +35,17 @@
       <td mat-cell *matCellDef="let element"> {{element.peso}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>
+        <button class="add" mat-raised-button color="primary">Nuevo</button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon  matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
+        <mat-icon  matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
+        <mat-icon  matTooltip="Eliminar" class="delete" fontIcon="delete"></mat-icon>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
