--- a/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
@@ -40,7 +40,7 @@
         <button routerLink="/agregarMascotas" class="add" mat-raised-button color="primary">Nuevo</button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon  routerLink="/verMascota/" matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
+        <mat-icon  routerLink="/verMascota/1" matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
         <mat-icon  matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
         <mat-icon  matTooltip="Eliminar" class="delete" fontIcon="delete"></mat-icon>
       </td>
