--- a/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
@@ -2,6 +2,8 @@
   <h1>Listado de Mascotas</h1>
 </div>
 
+<app-spinner *ngIf="loading"></app-spinner>
+
 <div class="container">
   <mat-form-field>
     <mat-label>Filtro</mat-label>
