FE - Ahora el Ver Mascota Muestra Cada Una de las Mascotas

--- a/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
@@ -42,7 +42,7 @@
         <button routerLink="/agregarMascotas" class="add" mat-raised-button color="primary">Nuevo</button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon  routerLink="/verMascota/1" matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
+        <mat-icon  routerLink="/verMascota/{{element.id}}" matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
         <mat-icon  routerLink="/editarMascota/1" matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
         <mat-icon (click)="eliminarMascota()" matTooltip="Eliminar" class="delete" fontIcon="delete"></mat-icon>
       </td>
