--- a/FE-CRUDMascotas/src/app/components/ver-mascota/ver-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/ver-mascota/ver-mascota.component.html
@@ -2,14 +2,16 @@
   <h1>Ver Mascota</h1>
 </div>
 
-<div class="container">
+<app-spinner *ngIf="loading"></app-spinner>
+
+<div *ngIf="mascota != null" class="container">
   <mat-card class="card">
-    <mat-card-title>Bartolo</mat-card-title>
+    <mat-card-title>{{mascota.nombre}}</mat-card-title>
     <mat-card-content>
-      <p><strong>Raza:</strong> Labrador </p>
-      <p><strong>Color:</strong> Marron </p>
-      <p><strong>Peso:</strong> 25 Kg </p>
-      <p><strong>Edad:</strong> 4 años </p>
+      <p><strong>Raza:</strong> {{mascota.raza}} </p>
+      <p><strong>Color:</strong> {{mascota.color}} </p>
+      <p><strong>Peso:</strong> {{mascota.peso}} Kg </p>
+      <p><strong>Edad:</strong> {{mascota.edad}} años </p>
     </mat-card-content>
     <mat-card-actions>
       <button routerLink="/listaMascotas" mat-raised-button>Volver</button>
