--- a/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/FE-CRUDMascotas/src/app/components/listado-mascota/listado-mascota.component.html
@@ -43,7 +43,7 @@
       </th>
       <td mat-cell *matCellDef="let element">
         <mat-icon  routerLink="/verMascota/{{element.id}}" matTooltip="Ver" class="search" fontIcon="search"></mat-icon>
-        <mat-icon  routerLink="/editarMascota/1" matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
+        <mat-icon  routerLink="/editarMascota/{{element.id}}" matTooltip="Editar" class="edit" fontIcon="edit"></mat-icon>
         <mat-icon (click)="eliminarMascota(element.id)" matTooltip="Eliminar" class="delete" fontIcon="delete"></mat-icon>
       </td>
     </ng-container>
