--- a/FE-CRUDMascotas/src/app/components/dialog/dialog.component.html
+++ b/FE-CRUDMascotas/src/app/components/dialog/dialog.component.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>Eliminar Mascota</h2>
-<mat-dialog-content>
-  ¿Estás seguro de que quieres eliminarlo?
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Sí</button>
-</mat-dialog-actions>
+<div class="mensaje">
+  <h2 mat-dialog-title>Eliminar Mascota</h2>
+  <mat-dialog-content>
+    ¿Estás seguro de que quieres eliminarlo?
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button class="btnNo" mat-raised-button mat-dialog-close>No</button>
+    <button mat-raised-button [mat-dialog-close]="true" color="primary">Sí</button>
+  </mat-dialog-actions>
+</div>
